--- a/index.html
+++ b/index.html
@@ -1,80 +1,111 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>给世界上最可爱的宝宝</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="生日礼物，惊喜,有趣,最美" />
-	<meta name="description" content="世界上最美的女人，但是她不喜欢我 ಥ_ಥ " />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
-
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?e9e0ed8d2dd56059cc040dc1f05b7424";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
-
+	<title>Story to be continued</title>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<style type="text/css">
+		@font-face {
+			font-family: digit;
+			src: url('digital-7_mono.ttf') format("truetype");
+		}
+	</style>
+	<link href="css/default_dev.css" type="text/css" rel="stylesheet">
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/garden.js"></script>
+    <script type="text/javascript" src="js/functions.js"></script>
 </head>
+
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/1.jpg" alt="...">
-				</a>
+	<div id="mainDiv">
+		<div id="content">
+			<div id="code">
+				<span class="keyword">import</span> Boy <br />
+				<span class="keyword">import</span> Girl<br />
+				<br />
+				<span class="comments">'''</span><br />
+				<span class="space"/><span class="comments">Hey Bonnie, </span><br />
+				<span class="space"/><span class="comments">Hope this page finds you well.</span><br />
+				<span class="space"/><span class="comments">Every year we prepare each other a gift on Jan.4th, </span><br />
+				<span class="space"/><span class="comments">and it is the 4th gift I've made for you ^_^</span><br />
+				<span class="space"/><span class="comments">It is amazing that we were power and philosophy students when we met, and now we are both IT guys</span><br />
+				<span class="space"/><span class="comments">'''</span><br />
+				i = <span class="keyword">Boy</span>(<span class="string">'Qiyao'</span>)<br />
+				u = <span class="keyword">Girl</span>(<span class="string">'Bonnie'</span>)<br />
+				<span class="comments"># Jan 4th, 2013, I asked you to be my girlfriend, straight forward-- </span><br />
+				i.in_relationship(u)<br />
+				<span class="comments"># After a super awful movie which we both couldn't remember.</span><br />
+				u.accepted()<br />
+				<span class="comments"># Since then, we almost never missed a call every day.</span><br />
+				i.called(u, <span class="string">'everyday'</span>)<br />
+				<span class="comments"># And took care of you when you felt sick or sad or hungry</span><br />
+				i.took_care_of(<span class="string">u</span>)<br />
+				<span class="comments"># Sometimes(<strong>Often</strong>) you asked me why I like you</span><br />
+				ask_why = <span class="keyword">True</span><br />
+				<span class="keyword">while</span> ask_why: <br />
+				<span class="placeholder"/>i.tell_u([<span class="string">'cute'</span>, <span class="string">'considerate'</span>])<br />
+				<span class="comments"># But you know what, </span><br />
+				<span class="comments"># the closest answer for me now might be, </span><br />
+				<span class="comments"># You are just a gift from the god, and I <strong>love</strong> you soooo much</span><br />
+				i.regarded_as(u, <span class="string">'gift'</span>)<br />
+				<span class="comments"># now I want to ask you a simple <strong>YES_OR_NO</strong> question: </span><br />
+				yes_or_no = raw_input(<span class="string">'Are you willing to love me forever? :'</span>)<br />
+				<form action="">
+					<input type="radio" name="radiobutton" value="radiobutton" checked> Of Course Yes!
+					<input type="radio" name="radiobutton" value="radiobutton"> Without Doubt Yes!
+					<input type="submit"/>
+				</form>
 			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/2.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/3.jpg" alt="...">
-				</a>
+			<div id="loveHeart">
+				<canvas id="garden"></canvas>
+				<div id="words">
+					<div id="messages">
+						Bonnie, I have fallen in love with you for
+						<div id="elapseClock"></div>
+					</div>
+					<div id="loveu">
+						Love u forever and ever.<br/>
+						<div class="signature">- Qiyao</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/4.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/5.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/6.jpg" alt="...">
-				</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/7.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/8.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://DavidCorn.github.io" class="thumbnail">
-					<img src="img/9.jpg" alt="...">
-				</a>
-			</div>
+		<div id="copyright">
+			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
+			Copyright © 2017 <a href='http://DavidCorn.github.io'>DavidCorn.github.io</a> 2013-2017
 		</div>
 	</div>
+	<script type="text/javascript">
+		var offsetX = $("#loveHeart").width() / 2;
+		var offsetY = $("#loveHeart").height() / 2 - 55;
+		var together = new Date();
+		together.setFullYear(2013, 1, 4);
+		together.setHours(20);
+		together.setMinutes(0);
+		together.setSeconds(0);
+		together.setMilliseconds(0);
 
+		if (!document.createElement('canvas').getContext) {
+			var msg = document.createElement("div");
+			msg.id = "errorMsg";
+			msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+";
+			document.body.appendChild(msg);
+			$("#code").css("display", "none")
+			$("#copyright").css("position", "absolute");
+			$("#copyright").css("bottom", "10px");
+		    document.execCommand("stop");
+		} else {
+			setTimeout(function () {
+				startHeartAnimation();
+			}, 5000);
+
+			timeElapse(together);
+			setInterval(function () {
+				timeElapse(together);
+			}, 500);
+
+			adjustCodePosition();
+			$("#code").typewriter();
+		}
+	</script>
 </body>
 </html>
