modify readme file

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				i.regarded_as(u, <span class="string">'gift'</span>)<br />
 				<span class="comments"># now I want to ask you a simple <strong>YES_OR_NO</strong> question: </span><br />
 				yes_or_no = raw_input(<span class="string">'Are you willing to love me forever? :'</span>)<br />
-				<form action="">
+				<form action="show_picture.html">
 					<input type="radio" name="radiobutton" value="radiobutton" checked> Of Course Yes!
 					<input type="radio" name="radiobutton" value="radiobutton"> Without Doubt Yes!
 					<input type="submit"/>
